# librealgebra

./: Cargo.toml  shell.nix
.github/workflows/: ci.yml
la-parse/: Cargo.toml
la-parse/src/: error.rs  lex.rs  lib.rs  parse.rs  scope.rs
la-reference/definition/: Power.la  RowMarkup.la  SuperscriptMarkup.la
la-simplify/: Cargo.toml
la-simplify/src/: builtins.rs  constants.rs  lib.rs  names.rs
la-simplify/src/builtins/: Cos.rs  Derivative.rs  Sin.rs  mod.rs
la-term/: Cargo.toml
la-term/src/: application.rs  byte_string.rs  de_bruijn.rs  guard.rs  integer.rs  lambda.rs  lib.rs  string.rs  symbol.rs  variable.rs
librealgebra/: Cargo.toml
script/: check-duplicate-deps.bash  vscode-build-task.bash
