[package]
name = "la-parse"
version = "0.0.0"
edition = "2021"

# Library for hash tables.
[dependencies.hashbrown]
version = "~0.11.2"

[dependencies.la-term]
path = "../la-term"

# Library for writing lexers.
[dependencies.logos]
default-features = false
features = ["export_derive"]
version = "~0.12.0"
